--- a/apps/desktop/src-tauri/Cargo.toml
+++ b/apps/desktop/src-tauri/Cargo.toml
@@ -21,6 +21,16 @@ tauri-plugin-dialog = "2.0"
 tauri-plugin-fs = "2.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+chrono = { version = "0.4", features = ["serde"] }
+tokio = { version = "1", features = ["full"] }
+async-imap = "0.9"
+futures-util = "0.3"
+tokio-util = { version = "0.7", features = ["io", "compat"] }
+tokio-native-tls = "0.3"
+native-tls = "0.2"
+mailparse = "0.14"
+lettre = "0.11"
+base64 = "0.22"
 
 [features]
 # This feature is used for production builds or when `devPath` points to the filesystem
